Reposition span.coto-tool-buttons to avoid overlapping with the content

--- a/web/static/css/coto.scss
+++ b/web/static/css/coto.scss
@@ -83,14 +83,43 @@ div.coto-body {
 
   span.coto-tool-buttons {
     position: absolute;
-    top: 0;
+    top: -40px;
     right: 0;
     z-index: 2;
     display: none;
     height: 34px;
     padding: 0;
-    padding-top: 2px;
+    padding-top: 3px;
+    padding-right: 10px;
+    border: 1px solid #eee;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .1);
     background-color: rgba(255, 255, 255, .6);
+
+    &::before {
+      content: '';
+      position: absolute;
+      display: block;
+      width: 0;
+      height: 0;
+      right: 0;
+      bottom: -10px;
+      border-top: 10px solid #eee;
+      border-right: 10px solid transparent;
+      border-left: 10px solid transparent;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      display: block;
+      width: 0;
+      height: 0;
+      right: 0;
+      bottom: -8px;
+      border-top: 10px solid rgba(255, 255, 255, .8);
+      border-right: 10px solid transparent;
+      border-left: 10px solid transparent;
+    }
 
     a.tool-button {
       margin-left: 10px;
